tests/type-errors/decl_no_asset_subset.arl
archetype decl_no_asset_subset

asset my_asset {
  id : string;
}

variable a : my_asset subset = []

action exec() {
  effect {
    require (true)
  }
}
